--- a/LanguageSchool/Views/User/TimeTable.cshtml
+++ b/LanguageSchool/Views/User/TimeTable.cshtml
@@ -90,12 +90,13 @@
                         {
                             style += "border-bottom-style: none;";
                         }
-
-                        <td align="center"  bgcolor="@hexColor" style="@style">
-                            @if (show)
-                            {
-                                <strong>@current.Group.Course.Name</strong>
-                            }
+                        <td align="center" bgcolor="@hexColor" style="@style">
+                            <a href="@Url.Action("Index", "LessonSubject", new { id = current.Group.Id })" style = "text-decoration:none; color:black">
+                                @if (show)
+                                {
+                                    <strong>@current.Group.Course.Name</strong>
+                                }
+                            </a>
                         </td>
                     }
                 }
