--- a/LanguageSchool/Views/Group/Details.cshtml
+++ b/LanguageSchool/Views/Group/Details.cshtml
@@ -1,115 +1,77 @@
 ﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
     <div class="row col-md-12">
         <div class="thumbnail col-md-4">
-            <div class="col-md-6">
-                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
-            </div>
-            <div class="col-md-6">
-                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "Group")'">Usuń</button>
-            </div>
-        </div>
-    </div>
-    <div class="row thumbnail col-md-12">
-        <div class="row">
-            <div class="col-md-3">
-                <label>
-                    Nazwa
-                </label>
-            </div>
-
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.Name)
-            </div>
-
-            <div class="col-md-3">
-                <label>
-                    Prowadzący
-                </label>
-            </div>
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.Teacher.Fullname)
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-                <label>
-                    Data rozpoczęcia
-                </label>
-            </div>
-
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.StartDate)
-            </div>
-
-            <div class="col-md-3">
-                <label>
-                    Data zakończenia
-                </label>
-            </div>
-            <div class="col-md-3">
-                @Html.DisplayFor(model => model.EndDate)
-            </div>
+            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Create", "LessonSubject")'">Dodaj nowy temat</button>
         </div>
     </div>
     <div class="row thumbnail col-md-12">
         <table class="table table-striped table-bordered">
             <tr>
                 <th>
-                    Dzień
+                    Utworzono
                 </th>
                 <th>
-                    Godziny
+                    Nazwa
                 </th>
             </tr>
-            @foreach (var groupTime in Model.Hours)
+            @foreach (var lessonSubject in Model.LessonSubjects)
             {
                 <tr>
                     <td>
-                        @groupTime.DayOfWeek.PLName
+                        @lessonSubject.CreationDate
                     </td>
                     <td>
-                        @groupTime.StartTime.15 - @(groupTime.EndTime + 1).15
+                        @lessonSubject.Name
                     </td>
                 </tr>
             }
         </table>
     </div>
     <div class="row col-md-12">
-        <div class="thumbnail col-md-3">
-            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddUsers", "Group")'">Zapisz nowych uczniów</button>
+        <div class="thumbnail col-md-4">
+            Uczestnicy
         </div>
     </div>
-    @if (Model.Students.Any())
-    {
-        <div class="row thumbnail col-md-12">
-            <table class="table table-striped table-bordered">
+    <div class="row thumbnail col-md-12">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>
+                    Dodano
+                </th>
+                <th>
+                    Nazwa użytkownika
+                </th>
+                <th>
+                    Email
+                </th>
+                <th>
+                    Numer telefonu
+                </th>
+            </tr>
+            @foreach (var student in Model.Students)
+            {
                 <tr>
-                    <th>
-                        Utworzono
-                    </th>
-                    <th>
-                        Uczeń
-                    </th>
+                    <td>
+                        @student.CreationDate
+                    </td>
+                    <td>
+                        @student.Fullname
+                    </td>
+                    <td>
+                        @student.EmailAdress
+                    </td>
+                    <td>
+                        @student.PublicPhoneNumber
+                    </td>
                 </tr>
-                @foreach (var student in Model.Students)
-                {
-                    <tr>
-                        <td>
-                            @student.CreationDate
-                        </td>
-                        <td>
-                            @student.Fullname
-                        </td>
-                    </tr>
-                }
-            </table>
-        </div>
-    }
+            }
+        </table>
+    </div>
 </div>
