--- a/LanguageSchool/Views/User/TimeTable.cshtml
+++ b/LanguageSchool/Views/User/TimeTable.cshtml
@@ -91,7 +91,7 @@
                             style += "border-bottom-style: none;";
                         }
                         <td align="center" bgcolor="@hexColor" style="@style">
-                            <a href="@Url.Action("Index", "LessonSubject", new { id = current.Group.Id })" style = "text-decoration:none; color:black">
+                            <a href="@Url.Action("Redirect", "Group", new { id = current.Group.Id })" style = "text-decoration:none; color:black">
                                 @if (show)
                                 {
                                     <strong>@current.Group.Course.Name</strong>
