Działające rozciągnięte linki w tt

--- a/LanguageSchool/Views/User/TimeTable.cshtml
+++ b/LanguageSchool/Views/User/TimeTable.cshtml
@@ -125,6 +125,15 @@
         width: 120px;
         max-height: 35px;
     }
+
+    td {
+        overflow: hidden;
+    }
+    td a {
+        display: block;
+        margin: -10em;
+        padding: 10em;
+    }
 </style>
 
 @section Scripts {
