--- a/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
+++ b/LanguageSchool/Views/LessonSubject/LessonSubjects.cshtml
@@ -31,7 +31,7 @@
                         @lessonSubject.CreationDate.ToString("yyy/MM/dd")
                     </td>
                     <td>
-                        @Html.ActionLink(lessonSubject.Name, "Index", "Material", new { CourseId = lessonSubject.CourseId }, null)
+                        @Html.ActionLink(lessonSubject.Name, "Index", "Material", new { Id = lessonSubject.Id }, null)
                     </td>
                     <td>
                         @lessonSubject.Description
