--- a/LanguageSchool/Views/LessonSubject/Create.cshtml
+++ b/LanguageSchool/Views/LessonSubject/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model LanguageSchool.Models.LessonSubject
+﻿@model LanguageSchool.Models.ViewModels.LessonSubjectViewModel
 
 @{
     ViewBag.Title = "Create";
@@ -22,14 +22,24 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="control-label col-md-4">
-                        <strong>Nazwa</strong>
+                        <strong>Temat</strong>
                     </div>
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
                     </div>
                 </div>
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Aktywny</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control" } })
+                    </div>
+                </div>
+            </div>
 
+            <div class="col-md-6">
                 <div class="form-group">
                     <div class="control-label col-md-4">
                         <strong>Opis</strong>
