--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -45,12 +45,12 @@
 {
     <div class="container w-100 h-100">
         <div class="row align-items-center h-100">
-            <div class="col-xs-3">
-                <div>
-                    <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
-                </div>
-            </div>
-            <div class="col-xs-6">
+            @*<div class="col-xs-3">
+        <div>
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
+        </div>
+    </div>*@
+            <div class="col-xs-6 col-xs-offset-3">
             </div>
             @if (!@Model.IsSystem)
             {
