--- a/LanguageSchool/Views/Message/Details.cshtml
+++ b/LanguageSchool/Views/Message/Details.cshtml
@@ -5,81 +5,71 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="thumbnail">
-    <dl class="dl-horizontal">
-        <dt>
-            Tytuł:
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.Topic)
-        </dd>
-
-        <dt>
-            Data wysłania:
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.SentDate)
-        </dd>
-
-        <dt>
-            Data odczytania:
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedDate)
-        </dd>
-
-        <dt> 
-            Treść:
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Contents)
-        </dd>
-    </dl>
-</div>
-
-@using (Html.BeginForm())
-{
-    <div class="container w-100 h-100">
-        <div class="row align-items-center h-100">
-            @*<div class="col-xs-3">
-        <div>
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Index", "Message")'">Moje komunikaty</button>
-        </div>
-    </div>*@
-            <div class="col-xs-6 col-xs-offset-3">
+<div class="container">
+    @if (!@Model.IsSystem)
+    {
+        <div class="row col-md-12">
+            <div class="thumbnail col-md-3">
+                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
             </div>
-            @if (!@Model.IsSystem)
-            {
-                <div class="col-xs-3">
-                    <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#myModal">Usuń</button>
-                    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-                        <div class="modal-dialog modal-sm" role="document">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                    <h4 class="modal-title" id="myModalLabel">Potwierdź usunięcie</h4>
-                                </div>
-                                <div class="modal-body">
-                                    Czy na pewno chcesz usunąć tę wiadomość?
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
-                                    <input type="submit" value="Usuń" class="btn btn-danger" />
-                                </div>
-                            </div>
-                        </div>
+        </div>
+    }
+
+    <div class="row thumbnail">
+        <dl class="dl-horizontal">
+            <dt>
+                Tytuł:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Topic)
+            </dd>
+
+            <dt>
+                Data wysłania:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.SentDate)
+            </dd>
+
+            <dt>
+                Data odczytania:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.ReceivedDate)
+            </dd>
+
+            <dt>
+                Treść:
+            </dt>
+
+            <dd>
+                @Html.DisplayFor(model => model.Contents)
+            </dd>
+        </dl>
+    </div>
+
+    @using (Html.BeginForm())
+    {
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+            <div class="modal-dialog modal-sm" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Potwierdź usunięcie</h4>
+                    </div>
+                    <div class="modal-body">
+                        Czy na pewno chcesz usunąć tę wiadomość?
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">Anuluj</button>
+                        <input type="submit" value="Usuń" class="btn btn-danger" />
                     </div>
                 </div>
-            }
-            else
-            {
-                <div class="col-xs-3">
-                </div>
-            }
+            </div>
         </div>
-    </div>
-}
+    }
+</div>
